# cl-chess

./: .gitignore  Cargo.toml  LICENSE-Apache-2.0  LICENSE-MIT  README.md  board.txt  chess-pieces  pipes
crates/termchess-cli/: Cargo.toml
crates/termchess-common/: Cargo.toml
crates/termchess-common/src/: lib.rs
crates/termchess-engine/: Cargo.toml
crates/termchess-engine/src/: ai.rs  board.rs  fide.rs  lib.rs
crates/termchess-engine/src/board/: ascii.rs  print.rs
crates/termchess-learning/: Cargo.toml
crates/termchess-netcode/: Cargo.toml
crates/termchess-netcode/src/: lan.rs  lib.rs
crates/termchess-server/: Cargo.toml
crates/termchess-tui/: Cargo.toml
crates/termchess-tui/src/: ascii.rs  game.rs  lib.rs  menu.rs
crates/termchess-tui/src/game/: board.rs  console.rs  messages.rs
crates/termchess-tui/src/game/board/: ascii.rs
crates/termchess-tui/src/menu/: items.rs
src/: args.rs  board.rs  lib.rs  main.rs  text.rs  tui.rs
src/board/: ascii.rs
src/tui/: menu.rs
src/tui/menu/: items.rs
