[package]
name = "cl-chess"
version = "0.1.0"
authors = ["Iris Teyssier"]
edition = "2021"
description = "Command line chess, with artificial intelligence"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
colored = "2.1.0"
lazy_static = "1.4.0"
