[package]
name = "termchess"
version = "0.1.0"
authors = ["Iris Teyssier iris.teyssier@gmail.com"]
edition = "2021"
description = "Command line chess, with artificial intelligence"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["crates/*"]

[lints]
workspace = true

[workspace.lints.rust]
# dead_code = "allow"
# unused_variables = "allow"

[workspace.lints.clippy]
cargo_common_metadata = "warn"
# allow_attributes = "warn"

[dependencies]
termchess-cli = { path = "crates/termchess-cli" }
termchess-tui = { path = "crates/termchess-tui" }
termchess-common = { path = "crates/termchess-common" }
termchess-engine = { path = "crates/termchess-engine" }
clap = { version = "4.5.1", features = ["derive"] }
colored = "2.1.0"
crossterm = { version = "0.27.0", features = ["event-stream"] }
lazy_static = "1.4.0"
ratatui = { version = "0.26.2" }
strum = { version = "0.26.2", features = ["strum_macros", "derive"] }
strum_macros = "0.26.2"
