[package]
name = "termchess-engine"
version = "0.1.0"
edition = "2021"
description = "The underlying representation of the termchess chess implementation"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termchess-common = { path = "../termchess-common" }
