[package]
name = "termchess-engine"
version = "0.1.0"
edition = "2021"
description = "The underlying representation of the termchess chess implementation"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
lazy_static = "1.4.0"
log = "0.4.21"
ratatui = "0.26.2"
termchess-common = { path = "../termchess-common" }
